# lxmls-toolkit

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README  README.md  README.txt  all_imports.py  index.html  nn_toy_architectures.py  pip-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  simple_logistic_regression.py  simple_naive_bayes.py  solve.py  todo  tox.ini
code/: run_all_classifiers.py
code/big_data/: em_lib.py  kmers.py  parallel_em.py  postprocess.py  wordcount.py
code/big_data_em/: em_lib.py  parallel_em.py  preprocess.py
code/classifiers/: multinomial_naive_bayes.py  multinomial_naive_bayes_ivo.py  perceptron.py
code/distributions/: gaussian.py
code/labs/: day1.py  day2.py  day3.py  day3_debug.py  day4.py  day5.py  day5.sh  day6.sh  run_all_classifiers.py
code/parsing/: dependency_decoder.py  dependency_parser.py
code/pos_tagging/: wsj_results.txt
code/readers/: pos_corpus.py  sentiment_reader.py  simple_data_set.py  simple_sequence.py
code/sequences/: TODO.txt  abstract_feature_class.py  confusion_matrix.py  crf_batch.py  crf_batch_debug.py  crf_online.py  discriminative_sequence_classifier.py  em.py  extended_feature.py  forward_backward.py  hmm.py  id_feature.py  label_dictionary.py  log_domain.py  sequence.py  sequence_classification_decoder.py  sequence_classifier.py  sequence_list.py  structured_perceptron.py
data/: dev-22.conll  test-23.conll
data/.svn/: entries
data/deppars/: portuguese_test.conll.pred  portuguese_train.conll
data/treebanks/: PTB_excerpt.txt
labs/: convert_notebooks.sh  remove_ipython_inline.py
labs/classifiers/: linear_classifier.py  multinomial_naive_bayes.py  multinomial_naive_bayes.py~
labs/labs/: day0.py  day1.py  day2.py  day2.py~
labs/pos_tagging/: train_pos_tag.py
labs/readers/: brown_pos_corpus.py  galton.py
labs/scripts/: day3.py  run_all_classifiers.py
lxmls/: __init__.py  buggy.py  data.py  day1.py  day4.py  run_all_classifiers.py
tests/: runtests.py  test_day3.py  test_galton_dataset.py  test_linear_classifier.py  test_lxmls_toolkit.py  test_non_linear_classifiers_numpy.py  test_non_linear_classifiers_pytorch.py  test_parsing.py  test_sequence_models.py  test_sequence_models_deep_learning.py  test_structured_predictors.py  test_vlm.py
(+259 files in other folders)
